--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
   "name": "oero-sap-upload",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "concurrently -n client,server -c blue,green \"npm run dev:client\" \"npm run dev:server\"",
+    "dev:client": "vite --config client/vite.config.ts",
+    "dev:server": "tsx watch --env-file=.env server/src/index.ts",
+    "build:client": "vite build --config client/vite.config.ts",
+    "build": "npm run build:client",
+    "lint": "eslint client/src server/src",
+    "verify-mapping": "tsx scripts/verify-mapping.ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1",
+    "@react-oauth/google": "^0.13.4",
     "clsx": "^2.1.1",
+    "dotenv": "^16",
     "fast-xml-parser": "^5.3.3",
     "framer-motion": "^12.27.1",
+    "google-auth-library": "^10.5.0",
+    "hono": "^4",
     "lucide-react": "^0.562.0",
-    "next": "16.1.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/vite": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5",
+    "concurrently": "^9",
     "eslint": "^9",
-    "eslint-config-next": "16.1.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tsx": "^4",
+    "typescript": "^5",
+    "vite": "^7"
   }
 }
